app/assets/stylesheets/_reviewer.scss
@import 'uswds/lib/addons/font-stacks';
@import 'uswds/core/variables';
@import 'font-awesome-sprockets';
@import 'font-awesome';

$caseflow-background: #f9f9f9;
$bookmark-blue: #23abf6;
$bookmark-orange: #f6a623;
$bookmark-white: #ffffff;
$bookmark-white-outline: #5b616b;
$bookmark-pink: #f772e7;
$bookmark-green: #3fcd65;
$bookmark-yellow: #efdf1a;
$caseflow-text-select-without-transparency: #6392ff;
$caseflow-text-select: transparentize($caseflow-text-select-without-transparency, 0.7);

@mixin focus {
  &:focus {
    box-shadow: $focus-shadow;
    outline: 0;
  }
}

.cf-nav-full-screen {
  padding: 10px 30px;

  .usa-grid-full {
    max-width: none;
  }

  .cf-nav-dropdown {
    right: 30px;
  }
}

.claim-detail-type-info {
  color: $color-secondary;
}

.cf-claims-folder-details {
  p {
    margin-top: 15px;
  }

  .claims-folder-issues {
    margin-top: 20px;

    ol {
      padding-top: 3px;
      padding-left: 1em;
      margin-top: 0;
      margin-bottom: 0;
    }
  }
}


.rc-collapse > .rc-collapse-item-disabled > .rc-collapse-header {
  color: $color-base;
}

[id=claim-folder-details-accordion] {
  .disabled {
    font-style: italic;
  }
}

.cf-pdf-page-container {
  position: absolute;
  top: 4em;
  bottom: 0;
  right: 0;
  left: 0;
  min-height: 400px;
  z-index: 0;
}

.cf-pdf-container {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 380px;
  left: 0;

  &.hidden-sidebar {
    right: 0;
  }
}

.cf-pdf-scroll-view {
  background-color: $color-gray;
  width: 100%;
  top: 50px;
  bottom: 50px;
  position: absolute;
  overflow-y: scroll;
  overflow-x: visible;
  text-align: center;
  z-index: 5;
  will-change: transform;

  @include focus;
}

.cf-pdf-page {
  margin: 20px 0;
  width: 100%;
}

.annotationLayer {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

// TODO: Get rid of the rule in caseflow commons that makes
// this necessary!
// scss-lint:disable QualifyingElement
svg[aria-hidden=true],
.fa[aria-hidden=true] {
  display: inline !important;
}
// scss-lint:enable QualifyingElement


.cf-non-stylized-header {
  font-size: inherit;
  margin: 0;
  color: inherit;
}

.cf-sidebar-wrapper {
  display: flex;
  flex-direction: column;
  width: 380px;
  top: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  text-align: left;
  background: $caseflow-background;
  border-top: 1px solid $color-gray-lighter;

  &.hidden-sidebar {
    width: 0;
  }

  .usa-accordion-content {
    background-color: $caseflow-background;
  }

  .usa-alert {
    margin-top: 15px;
  }
}

.cf-sidebar-header {
  padding-left: 20px;
  height: 50px;
  background-color: $color-gray-warm-light;
  line-height: 50px;
  color: $color-gray-dark;
}

.cf-document-info-wrapper {
  padding: 0 30px;
}

.cf-category-sidebar {
  overflow-y: hidden;
}

.cf-issue-tag-sidebar {
  overflow: visible;

  .Select-menu-outer {
    position: relative;
  }
}

.cf-comment-wrapper {
  $comment-wrapper-vertical-margin: 15px;
  margin-top: $comment-wrapper-vertical-margin;

  .usa-alert {
    margin-top: 0;
    margin-bottom: $comment-wrapper-vertical-margin;
  }
}

.cf-pdf-toolbar {
  background: $color-gray-dark;
  width: 100%;
  height: 50px;
  color: $color-white;
  font-size: 15px;
  max-width: 100%;
}

.cf-pdf-header {
  position: absolute;
  opacity: 1;
  padding: 15px 23px 15px 15px;
  // .cf-pdf-scroll-view is 5, .cf-search-bar is 6
  z-index: 7;

  .category-icons-and-doc-type {
    display: flex;
    justify-content: center;
  }

  .cf-pdf-buttons {
    &-left {
      min-height: 1px;
      text-align: left;
    }

    &-right {
      text-align: right;
    }

    &-center {
      text-align: center;
    }
  }
}

.cf-pdf-footer {
  position: absolute;
  opacity: 1;
  bottom: 0;
  padding: 0 20px;

  display: flex;
  align-items: center;

  button {
    display: flex;

    $button-label-spacing: 10px;

    .left-button-label {
      margin-left: $button-label-spacing;
    }

    .right-button-label {
      margin-right: $button-label-spacing;
    }
  }

  // We want the buttons to be 40px from the outer edge of the toolbar.
  // Other margins that are involved add up to 28px, so we add an
  // additional margin to make it 40.
  $left-outer-margin: 12px;
  $right-outer-margin: 20px;
  $footer-button-width: 100px;

  .cf-pdf-footer-buttons-right {
    width: $footer-button-width;
    margin-right: $right-outer-margin;
  }

  .cf-pdf-footer-buttons-left {
    width: $footer-button-width;
    margin-left: $left-outer-margin;
  }

  .cf-pdf-buttons-center {
    $spacing: 25px;
    margin-left: auto;
    margin-right: auto;

    .page-progress-indicator {
      margin-right: $spacing;
    }

    .page-progress-indicator-input {
      > input {
        width: 48px;
        height: 22px;
        display: inline-block;
        color: $color-white;
        background-color: $color-gray;
        border: 1px solid $color-white;
        text-align: center;
        margin: 5px;
        padding: 0;
      }

      > label {
        display: inline-block;
      }

    }

    .doc-list-progress-indicator {
      margin-left: $spacing;

      .filter-icon {
        margin-right: $spacing / 2;
        position: relative;
        top: 1px;
      }
    }
  }
}

.cf-comment-cursor {
  cursor: copy;
}

.cf-pdf-bookmarks {
  transform: scale(1.5, 2);
}

// TODO: Remove !important
.cf-pdf-button {
  margin: 0 8px;
  color: inherit;
  padding: 0;
  background-color: transparent;
  font-size: inherit;
  pointer-events: all;
  line-height: normal;

  &:hover {
    text-decoration: none;
    background-color: transparent;
    color: $color-primary-alt;

    svg g {
      fill: $color-primary-alt;
    }
  }

  svg {
    vertical-align: bottom;
  }
}

.cf-pdf-spaced-buttons {
  margin: 0 18px;
}

.cf-pdf-edit-comment {
  float: right;
  position: relative;
  margin-right: -30px;
  overflow: visible;
}
/* ... */

